[FIX] - minor fix